# homework_github

./: .gitignore  README.md  pyproject.toml
src/: masks.py  processing.py
